# steam_download_monitor

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  steam_download_monitor.py
src/steam_monitor/: __init__.py  app.py  config.py  monitor.py  steam.py
tests/: conftest.py  test_content_log_parser.py  test_manifest_store.py
