[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-download-monitor"
version = "0.1.0"
description = "Steam download speed monitor"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
steam-download-monitor = "steam_monitor.app:main"
